Import fixes